
v6.16
(xx/09/18)

Changes / Improvements / Optimizations:
DietPi-Software | Pi-hole: You can now install Pi-hole again on Debian Jessie system, as support got re-enabled with Pi-hole v4.0 FTLDNS update.

Bug Fixes:
General | Resolved an issue where 1st run setup password prompt, would run twice. Once on 1st run and once after updates are completed.
DietPi-Config | Resolved an issue with selected WiFi SSID not being correctly applied: https://github.com/Fourdee/DietPi/issues/2070#issuecomment-421060961

-----------------------------------------------------------------------------------------------------------


v6.15
(12/09/18)

Many thanks to PINE64, for becoming our 1st Patreon Legend and supporting our project! As one of their rewards, you will see PINE64 displayed on login via the DietPi-Banner.

Known issues / In progress:
DietPi-Software | Open Bazaar: Installation updated to server version 2, which now runs via go language. At the current state, client OB connections are failing, still under investigation: https://github.com/Fourdee/DietPi/issues/1090#issuecomment-419613346

Changes / Improvements / Optimizations:
General | Changed Survey and Bugreport uploads to use ssh.dietpi.com (previously IP): https://github.com/Fourdee/DietPi/issues/2022#issuecomment-415470064
General | 1st run setup and dietpi-update logs are now created in RAM, then copied to disk once completed '/var/tmp/dietpi/logs/dietpi-firstrun-setup.log'. This will speed up 1st run setup installation for slow SBCs and/or rootFS.
General | PineA64: Image updated to v6.14, also contains the latest kernel/uboot by Ayufan (0.6.2): https://github.com/Fourdee/DietPi/issues/2026
General | Resolved an isssue where the initial 1st run connection test would fail, if timesync had not yet completed, and, the SSL cert of the connection test site is not valid for current date on system: https://github.com/Fourdee/DietPi/issues/2039