@@ -2394,6 +2394,7 @@
 	WIFI_DNS='0.0.0.0'
 	WIFI_MODE=1 #0=static 1=dhcp
 	WIFI_MODE_TARGET=0
+	WIFI_SSID_CURRENT=''
 	WIFI_CRED_INDEX=0
 	aWIFI_SSID=()
 	aWIFI_KEY=()
@@ -2565,28 +2566,6 @@ _EOF_
 		#Update Current Mode for network restart
 		ETH_MODE=$ETH_MODE_TARGET
 		WIFI_MODE=$WIFI_MODE_TARGET
-
-		#Save WiFi creds
-		if (( ! $WIFI_HOTSPOT )); then
-
-			# - Update db
-			G_CONFIG_INJECT "aWIFI_SSID[$WIFI_CRED_INDEX]=" "aWIFI_SSID[$WIFI_CRED_INDEX]=\"${aWIFI_SSID[$WIFI_CRED_INDEX]}\"" /var/lib/dietpi/dietpi-wifi.db
-			G_CONFIG_INJECT "aWIFI_KEY[$WIFI_CRED_INDEX]=" "aWIFI_KEY[$WIFI_CRED_INDEX]=\"${aWIFI_KEY[$WIFI_CRED_INDEX]}\"" /var/lib/dietpi/dietpi-wifi.db
-			G_CONFIG_INJECT "aWIFI_KEYMGR[$WIFI_CRED_INDEX]=" "aWIFI_KEYMGR[$WIFI_CRED_INDEX]=\"${aWIFI_KEYMGR[$WIFI_CRED_INDEX]}\"" /var/lib/dietpi/dietpi-wifi.db
-			G_CONFIG_INJECT "aWIFI_PROTO[$WIFI_CRED_INDEX]=" "aWIFI_PROTO[$WIFI_CRED_INDEX]=\"${aWIFI_PROTO[$WIFI_CRED_INDEX]}\"" /var/lib/dietpi/dietpi-wifi.db
-			G_CONFIG_INJECT "aWIFI_PAIRWISE[$WIFI_CRED_INDEX]=" "aWIFI_PAIRWISE[$WIFI_CRED_INDEX]=\"${aWIFI_PAIRWISE[$WIFI_CRED_INDEX]}\"" /var/lib/dietpi/dietpi-wifi.db
-			G_CONFIG_INJECT "aWIFI_AUTH_ALG[$WIFI_CRED_INDEX]=" "aWIFI_AUTH_ALG[$WIFI_CRED_INDEX]=\"${aWIFI_AUTH_ALG[$WIFI_CRED_INDEX]}\"" /var/lib/dietpi/dietpi-wifi.db
-			G_CONFIG_INJECT "aWIFI_EAP[$WIFI_CRED_INDEX]=" "aWIFI_EAP[$WIFI_CRED_INDEX]=\"${aWIFI_EAP[$WIFI_CRED_INDEX]}\"" /var/lib/dietpi/dietpi-wifi.db
-			G_CONFIG_INJECT "aWIFI_IDENTITY[$WIFI_CRED_INDEX]=" "aWIFI_IDENTITY[$WIFI_CRED_INDEX]=\"${aWIFI_IDENTITY[$WIFI_CRED_INDEX]}\"" /var/lib/dietpi/dietpi-wifi.db
-			G_CONFIG_INJECT "aWIFI_PASSWORD[$WIFI_CRED_INDEX]=" "aWIFI_PASSWORD[$WIFI_CRED_INDEX]=\"${aWIFI_PASSWORD[$WIFI_CRED_INDEX]}\"" /var/lib/dietpi/dietpi-wifi.db
-			G_CONFIG_INJECT "aWIFI_PHASE1[$WIFI_CRED_INDEX]=" "aWIFI_PHASE1[$WIFI_CRED_INDEX]=\"${aWIFI_PHASE1[$WIFI_CRED_INDEX]}\"" /var/lib/dietpi/dietpi-wifi.db
-			G_CONFIG_INJECT "aWIFI_PHASE2[$WIFI_CRED_INDEX]=" "aWIFI_PHASE2[$WIFI_CRED_INDEX]=\"${aWIFI_PHASE2[$WIFI_CRED_INDEX]}\"" /var/lib/dietpi/dietpi-wifi.db
-			G_CONFIG_INJECT "aWIFI_CERT[$WIFI_CRED_INDEX]=" "aWIFI_CERT[$WIFI_CRED_INDEX]=\"${aWIFI_CERT[$WIFI_CRED_INDEX]}\"" /var/lib/dietpi/dietpi-wifi.db
-
-			# - Function apply
-			/DietPi/dietpi/func/dietpi-set_hardware wificreds set
-
-		fi
 
 		#restart net
 		Network_Restart
@@ -2761,7 +2740,7 @@ _EOF_
 		G_WHIP_INPUTBOX 'Please enter the SSID name to connect to.'
 		if (( $? == 0 )); then
 
-			aWIFI_SSID[$WIFI_CRED_INDEX]=$G_WHIP_RETURNED_VALUE
+			aWIFI_SSID[$WIFI_CRED_INDEX]="$G_WHIP_RETURNED_VALUE"
 
 		fi
 
@@ -2769,11 +2748,32 @@ _EOF_
 
 	Change_WifiKey(){
 
-		G_WHIP_DEFAULT_ITEM="${aWIFI_KEY[$WIFI_CRED_INDEX]}"
-		G_WHIP_INPUTBOX 'Please enter the Access Key (WPA).'
+		G_WHIP_MENU_ARRAY=(
+
+			'WPA-PSK' ': Current Standard'
+			'WEP' ': Older standard'
+			'NONE' ': Open host that does not require any key'
+
+		)
+
+		G_WHIP_DEFAULT_ITEM="${aWIFI_KEYMGR[$WIFI_CRED_INDEX]}"
+		G_WHIP_MENU 'Please select a WiFi encryption mode.\n\nNB: If unsure, its most likely WPA-PSK.'
 		if (( $? == 0 )); then
 
-			aWIFI_KEY[$WIFI_CRED_INDEX]=$G_WHIP_RETURNED_VALUE
+			aWIFI_KEYMGR[$WIFI_CRED_INDEX]="$G_WHIP_RETURNED_VALUE"
+
+			if [[ ${aWIFI_KEYMGR[$WIFI_CRED_INDEX]} != 'NONE' ]]; then
+
+				G_WHIP_DEFAULT_ITEM="${aWIFI_KEY[$WIFI_CRED_INDEX]}"
+				G_WHIP_INPUTBOX 'Please enter the Access Key (WPA).'
+				if (( $? == 0 )); then
+
+					aWIFI_KEY[$WIFI_CRED_INDEX]="$G_WHIP_RETURNED_VALUE"
+
+
+				fi
+
+			fi
 
 		fi
 
@@ -2868,7 +2868,6 @@ _EOF_
 
 			aWIFI_SSID[$WIFI_CRED_INDEX]="$G_WHIP_RETURNED_VALUE"
 			Change_WifiKey
-			Wifi_Reconnect
 
 		fi
 
@@ -2876,13 +2875,34 @@ _EOF_
 
 	Wifi_Reconnect(){
 
-		G_WHIP_YESNO "SSID: ${aWIFI_SSID[$WIFI_CRED_INDEX]} \nKEY: ${aWIFI_KEY[$WIFI_CRED_INDEX]} \n\nConnect now? \n\n(NOTICE) All WiFi connections will be dropped!"
-		if (( $? == 0 )); then
+		local ssid_text='Stored WiFi SSIDs:\n'
+		local ssid_configured=0
 
-			#Apply Changes
-			printf '\ec' # clear current terminal screen
-			echo "Connecting to ${aWIFI_SSID[$WIFI_CRED_INDEX]} , please wait"
-			Network_ApplyChanges
+		for (( i=0; i<5; i++ ))
+		do
+
+			if [[ ${aWIFI_SSID[$i]} ]]; then
+
+				ssid_text+=" - ${aWIFI_SSID[$i]}\n"
+				ssid_configured=1
+
+			fi
+
+		done
+
+		if (( $ssid_configured )); then
+
+			G_WHIP_YESNO "$ssid_text\nSave all changes and restart networking?\n\nNB: All WiFi connections will be dropped!"
+			if (( $? == 0 )); then
+
+				#Apply Changes
+				Network_ApplyChanges
+
+			fi
+
+		else
+
+			G_WHIP_MSG 'No WiFi SSIDs are configured, please use the "Scan" option to set this up.'
 
 		fi
 
@@ -2945,6 +2965,7 @@ _EOF_
 		WIFI_DNS='0.0.0.0'
 		WIFI_MODE=1
 		WIFI_MODE_TARGET=$WIFI_MODE
+		WIFI_SSID_CURRENT="$(iwgetid -r)"
 		WIFI_CRED_INDEX=0 # Which index of SSID/KEY etc we are editing
 
 		# - Load dietpi-wifi.db
@@ -3585,35 +3606,128 @@ WantedBy=multi-user.target
 _EOF_
 		systemctl daemon-reload
 		systemctl enable dietpi-wifi-monitor.service
-		systemctl start dietpi-wifi-monitor.service
+		G_RUN_CMD systemctl start dietpi-wifi-monitor.service
 
 	}
 
-	Menu_WiFi_Select_Index(){
+	Menu_WiFi_SSID_DB(){
 
-		G_WHIP_MENU_ARRAY=()
-		for (( i=0; i<5; i++ ))
+		local max_wifi_slots=5
+		if (( $WIFI_MODE == 0 || $WIFI_MODE_TARGET == 0 )); then
+
+			max_wifi_slots=1
+
+		fi
+
+		while true
 		do
 
-			if [[ ${aWIFI_SSID[$i]} ]]; then
+			G_WHIP_MENU_ARRAY=('' '●─ WiFi Slots')
+			for (( i=0; i<$max_wifi_slots; i++ ))
+			do
 
-				G_WHIP_MENU_ARRAY+=($i "SSID=${aWIFI_SSID[$i]} | Key=${aWIFI_KEY[$i]}")
+				if [[ ${aWIFI_SSID[$i]} ]]; then
+
+					G_WHIP_MENU_ARRAY+=($i "SSID = ${aWIFI_SSID[$i]} | Key = ${aWIFI_KEY[$i]}")
+
+				else
+
+					G_WHIP_MENU_ARRAY+=($i 'Unused: Select to configure')
+
+				fi
+
+			done
+
+			G_WHIP_DEFAULT_ITEM=$WIFI_CRED_INDEX
+			G_WHIP_BUTTON_CANCEL_TEXT='Back'
+			G_WHIP_MENU 'Please select a WiFi slot to configure:'
+			if (( $? == 0 )) && [[ $G_WHIP_RETURNED_VALUE ]]; then
+
+					WIFI_CRED_INDEX=$G_WHIP_RETURNED_VALUE
+
+					G_WHIP_MENU_ARRAY=()
+					if [[ ${aWIFI_SSID[$WIFI_CRED_INDEX]} ]]; then
+
+						G_WHIP_MENU_ARRAY+=('Remove' ": Delete '${aWIFI_SSID[$WIFI_CRED_INDEX]}' from the database")
+
+					else
+
+						G_WHIP_MENU_ARRAY+=('Scan' ': Scan and configure an SSID')
+						G_WHIP_MENU_ARRAY+=('Manual' ': Manually enter all WiFi creds')
+
+					fi
+
+					local message_text="Please select an option for slot $WIFI_CRED_INDEX."
+					if [[ ${aWIFI_SSID[$WIFI_CRED_INDEX]} ]]; then
+
+						message_text+="\n\nCurrent details:\n - SSID = ${aWIFI_SSID[$WIFI_CRED_INDEX]}\n - Key = ${aWIFI_KEY[$WIFI_CRED_INDEX]}"
+
+					fi
+
+					G_WHIP_MENU "$message_text"
+					if (( $? == 0 )); then
+
+						if [[ $G_WHIP_RETURNED_VALUE == 'Remove' ]]; then
+
+							aWIFI_SSID[$WIFI_CRED_INDEX]=''
+							aWIFI_KEY[$WIFI_CRED_INDEX]=''
+
+						elif [[ $G_WHIP_RETURNED_VALUE == 'Scan' ]]; then
+
+							Scan_Wifi
+
+						elif [[ $G_WHIP_RETURNED_VALUE == 'Manual' ]]; then
+
+							Change_WifiSsid
+							Change_WifiKey
+
+						fi
+
+					fi
 
 			else
 
-				G_WHIP_MENU_ARRAY+=($i 'Unused: Select to configure')
+				# - Update db
+				#NB: THIS IS AN EXACT COPY OF wificreds set, ensure both match
+				rm /var/lib/dietpi/dietpi-wifi.db
+				#	Wish we could export an array... Could create a global for these to allow that, but, "security"................
+				for (( i=0; i<$max_wifi_slots; i++ ))
+				do
+
+					cat << _EOF_ >> /var/lib/dietpi/dietpi-wifi.db
+#---------------------------------------------------------------
+# - Entry $i
+#	WiFi SSID (Case Sensitive)
+aWIFI_SSID[$i]="${aWIFI_SSID[$i]}"
+#	Key options: If no key (open), leave this blank
+aWIFI_KEY[$i]="${aWIFI_KEY[$i]}"
+#	Available options: NONE (no key/open) | WPA-PSK | WEP | WPA-EAP (then use settings below)
+aWIFI_KEYMGR[$i]="${aWIFI_KEYMGR[$i]}"
+# - WPA-EAP Options
+aWIFI_PROTO[$i]="${aWIFI_PROTO[$i]}"
+aWIFI_PAIRWISE[$i]="${aWIFI_PAIRWISE[$i]}"
+aWIFI_AUTH_ALG[$i]="${aWIFI_AUTH_ALG[$i]}"
+aWIFI_EAP[$i]="${aWIFI_EAP[$i]}"
+aWIFI_IDENTITY[$i]="${aWIFI_IDENTITY[$i]}"
+aWIFI_PASSWORD[$i]="${aWIFI_PASSWORD[$i]}"
+aWIFI_PHASE1[$i]="${aWIFI_PHASE1[$i]}"
+aWIFI_PHASE2[$i]="${aWIFI_PHASE2[$i]}"
+#	Location of the certificate file in (eg: /boot/mycert.cer)
+aWIFI_CERT[$i]="${aWIFI_CERT[$i]}"
+_EOF_
+
+				done
+
+				/DietPi/dietpi/func/dietpi-set_hardware wificreds set
+
+				# - Reload array's
+				. /var/lib/dietpi/dietpi-wifi.db
+
+				break
 
 			fi
 
 		done
-
-		G_WHIP_DEFAULT_ITEM=$WIFI_CRED_INDEX
-		G_WHIP_MENU 'Please select a WiFi slot to configure:'
-		if (( $? == 0 )); then
-
-			WIFI_CRED_INDEX=$G_WHIP_RETURNED_VALUE
-
-		fi
 
 	}
 
@@ -3654,7 +3768,6 @@ _EOF_
 			G_WHIP_MENU_ARRAY+=('SSID' 'Change the wireless hotspot name')
 			G_WHIP_MENU_ARRAY+=('Channel' 'Change the wireless channel')
 			G_WHIP_MENU_ARRAY+=('Key' 'Change the access key required to connect')
-			G_WHIP_MENU_ARRAY+=('State' ": $hotspot_active_state_text")
 
 			description_text+="SSID    : $HOTSPOT_SSID\nChannel : $HOTSPOT_CHANNEL\nKey     : $HOTSPOT_KEY\nStatus  : $hotspot_status_text"
 
@@ -3677,8 +3790,8 @@ _EOF_
 
 			fi
 
-			G_WHIP_MENU_ARRAY+=('Scan' 'Scan and Connect')
-			G_WHIP_MENU_ARRAY+=('Manual' 'Manually Set Wireless Details')
+			G_WHIP_MENU_ARRAY=('' '●─ Basic Options ')
+			G_WHIP_MENU_ARRAY+=('Scan' 'Scan and configure SSID')
 
 			if (( $WIFI_CONNECTED || $(systemctl is-active dietpi-wifi-monitor.service | grep -ci -m1 '^active') )); then
 
@@ -3695,6 +3808,7 @@ _EOF_
 
 			fi
 
+			G_WHIP_MENU_ARRAY+=('' '●─ DHCP/STATIC IP ')
 			G_WHIP_MENU_ARRAY+=('Change Mode' ": $mode_target")
 
 			# - show static options
@@ -3708,12 +3822,12 @@ _EOF_
 
 			fi
 
-			G_WHIP_MENU_ARRAY+=('Disable' 'Disable WiFi adapter')
-
-			description_text+="SSID    : ${aWIFI_SSID[$WIFI_CRED_INDEX]} | $WIFI_BITRATE Mbit | Strength: $WIFI_SIGNALSTRENGTH\nKEY     : ${aWIFI_KEY[$WIFI_CRED_INDEX]} \nMode    : $mode_current \nIp      : $WIFI_IP\nMask    : $WIFI_MASK\nDNS     : $WIFI_DNS"
+			description_text+="SSID    : $WIFI_SSID_CURRENT | $WIFI_BITRATE Mbit | Strength: $WIFI_SIGNALSTRENGTH\nMode    : $mode_current \nIp      : $WIFI_IP\nMask    : $WIFI_MASK\nDNS     : $WIFI_DNS"
 
 		fi
 
+
+		G_WHIP_MENU_ARRAY+=('' '●─ Additional Options ')
 		# - Unset country code?
 		if [[ $WIFI_COUNTRYCODE == '00' ]]; then
 
@@ -3724,7 +3838,19 @@ _EOF_
 
 		fi
 
-		G_WHIP_MENU_ARRAY+=('Apply' 'Save Changes (Restart Networking)')
+		G_WHIP_MENU_ARRAY+=('' '●─ Toggle State ')
+		if (( $WIFI_HOTSPOT )); then
+
+			G_WHIP_MENU_ARRAY+=('State' ": $hotspot_active_state_text")
+
+		else
+
+			G_WHIP_MENU_ARRAY+=('Disable' 'Disable WiFi adapter')
+
+		fi
+
+		G_WHIP_MENU_ARRAY+=('' '●─ Apply ')
+		G_WHIP_MENU_ARRAY+=('Apply' 'Save all changes and restart networking')
 
 		G_WHIP_DEFAULT_ITEM="$WHIP_SELECTION_PREVIOUS"
 		G_WHIP_MENU "$description_text"
@@ -3823,17 +3949,7 @@ _EOF_
 
 				'Scan')
 
-					Menu_WiFi_Select_Index
-					Scan_Wifi
-
-				;;
-
-				'Manual')
-
-					Menu_WiFi_Select_Index
-					Change_WifiSsid
-					Change_WifiKey
-					Wifi_Reconnect
+					Menu_WiFi_SSID_DB
 
 				;;
 
@@ -3842,7 +3958,22 @@ _EOF_
 					((WIFI_MODE_TARGET++))
 					if (( $WIFI_MODE_TARGET >= 2 )); then
 
-						WIFI_MODE_TARGET=0
+						# G_WHIP_YESNO "Information:\n\nUsing STATIC IP on this device, will disable the ability to add multiple WiFi SSID's. Only one SSID can be used, all other SSID entries will be removed.\n\nDo you wish to continue with using STATIC IP?"
+						# if (( $? == 0 )); then
+
+							WIFI_MODE_TARGET=0
+
+							# - Clear all but the 1st, SSID entry, then regen wpa_supplicant.conf
+							# for (( i=1; i<5; i++ ))
+							# do
+
+								# aWIFI_SSID[$i]=''
+
+							# done
+
+							# /DietPi/dietpi/func/dietpi-set_hardware wificreds set
+
+						# fi
 
 					fi
 
@@ -4156,7 +4287,7 @@ Custom         : Write = $FSBENCH_CUSTOM_WRITE | Read = $FSBENCH_CUSTOM_READ"
 			sed -i '/sdram_freq=/c\#sdram_freq=400' /DietPi/config.txt
 
 			#Zero , via name id
-			if (( $(cat /DietPi/dietpi/.hw_model | tr '[:upper:]' '[:lower:]' | grep -ci -m1 'rpi zero') )); then
+			if grep -qi 'rpi zero' /DietPi/dietpi/.hw_model; then
 
 				sed -i '/arm_freq=/c\#arm_freq=1000' /DietPi/config.txt
 				sed -i '/core_freq=/c\#core_freq=400' /DietPi/config.txt
