@@ -14704,8 +14704,8 @@ _EOF_
 
 				fi
 
-				#Convert string to lowercase (easier to | grep stuff)
-				echo -e "${string,,}" #Much faster than echo -e $(echo -e "$string" | tr '[:upper:]' '[:lower:]')
+				#Convert string to lowercase
+				echo -e "${string,,}"
 
 			done
 
