@@ -32,8 +32,8 @@ $FP_SCRIPT 		lcdpanel 		target_panel (none to remove all)
 	#////////////////////////////////////
 
 	#Grab Inputs
-	INPUT_DEVICE_NAME=$(echo -e "$1" | tr '[:upper:]' '[:lower:]')
-	INPUT_DEVICE_VALUE=$(echo -e "$2" | tr '[:upper:]' '[:lower:]')
+	INPUT_DEVICE_NAME="${1,,}"
+	INPUT_DEVICE_VALUE="${2,,}"
 	# - support for 0/1 inputs for enable/disable
 	if [[ $INPUT_DEVICE_VALUE == '1' ]]; then
 
@@ -1249,6 +1249,25 @@ _EOF_
 
 	}
 
+	WiFi_Creds_Reset_Slot(){
+
+		local index=$1
+
+		aWIFI_SSID[$index]=''
+		aWIFI_KEY[$index]=''
+		aWIFI_KEYMGR[$index]='WPA-PSK'
+		aWIFI_PROTO[$index]=''
+		aWIFI_PAIRWISE[$index]=''
+		aWIFI_AUTH_ALG[$index]=''
+		aWIFI_EAP[$index]=''
+		aWIFI_IDENTITY[$index]=''
+		aWIFI_PASSWORD[$index]=''
+		aWIFI_PHASE1[$index]=''
+		aWIFI_PHASE2[$index]=''
+		aWIFI_CERT[$index]=''
+
+	}
+
 	Wifi_Creds_Main(){
 
 		if [[ $INPUT_DEVICE_VALUE ]]; then
@@ -1270,8 +1289,12 @@ _EOF_
 
 				fi
 
-				. /var/lib/dietpi/dietpi-wifi.db
-				rm /var/lib/dietpi/dietpi-wifi.db
+				if [[ -f /boot/dietpi-wifi.txt ]]; then
+
+					. /var/lib/dietpi/dietpi-wifi.db
+					rm /var/lib/dietpi/dietpi-wifi.db
+
+				fi
 
 				for (( i=0; i<5; i++ ))
 				do
@@ -1279,18 +1302,7 @@ _EOF_
 					# - No entry, init + reset
 					if [[ ! ${aWIFI_SSID[$i]} ]]; then
 
-						aWIFI_SSID[$i]=''
-						aWIFI_KEY[$i]=''
-						aWIFI_KEYMGR[$i]='WPA-PSK'
-						aWIFI_PROTO[$i]=''
-						aWIFI_PAIRWISE[$i]=''
-						aWIFI_AUTH_ALG[$i]=''
-						aWIFI_EAP[$i]=''
-						aWIFI_IDENTITY[$i]=''
-						aWIFI_PASSWORD[$i]=''
-						aWIFI_PHASE1[$i]=''
-						aWIFI_PHASE2[$i]=''
-						aWIFI_CERT[$i]=''
+						WiFi_Creds_Reset_Slot $i
 
 					# - Apply to wpa_supplicant.conf
 					else
@@ -1367,6 +1379,7 @@ _EOF_
 					fi
 
 					# - Update db
+						#NB: THIS IS AN EXACT COPY OF dietpi-config, ensure both match
 					cat << _EOF_ >> /var/lib/dietpi/dietpi-wifi.db
 #---------------------------------------------------------------
 # - Entry $i
@@ -1413,16 +1426,13 @@ _EOF_
 		#Use country code from command input. Implies new setting.
 		if [[ $INPUT_DEVICE_VALUE ]]; then
 
-			#convert to uppercase: https://github.com/Fourdee/DietPi/issues/431
-			INPUT_DEVICE_VALUE=$(echo -e "$INPUT_DEVICE_VALUE" | tr '[:lower:]' '[:upper:]')
-
 			# - Apply value to DietPi.txt
-			G_CONFIG_INJECT 'CONFIG_WIFI_COUNTRY_CODE=' "CONFIG_WIFI_COUNTRY_CODE=$INPUT_DEVICE_VALUE" /DietPi/dietpi.txt
+			G_CONFIG_INJECT 'CONFIG_WIFI_COUNTRY_CODE=' "CONFIG_WIFI_COUNTRY_CODE=${INPUT_DEVICE_VALUE^^}" /DietPi/dietpi.txt
 
 			# - Update wpa_supplicant.conf
 			if [[ -f '/etc/wpa_supplicant/wpa_supplicant.conf' ]]; then
 
-				G_CONFIG_INJECT 'country=' "country=$INPUT_DEVICE_VALUE" /etc/wpa_supplicant/wpa_supplicant.conf
+				G_CONFIG_INJECT 'country=' "country=${INPUT_DEVICE_VALUE^^}" /etc/wpa_supplicant/wpa_supplicant.conf
 
 			fi
 
