@@ -3,6 +3,7 @@ v6.16
 (xx/09/18)
 
 Changes / Improvements / Optimizations:
+DietPi-Config | WiFi: Added support for applying up-to 5 SSIDs: https://github.com/Fourdee/DietPi/issues/368
 DietPi-Software | Pi-hole: You can now install Pi-hole again on Debian Jessie system, as support got re-enabled with Pi-hole v4.0 FTLDNS update.
 
 Bug Fixes:
